<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homologation.InputActivity"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="Homologation"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_input"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/text_respect"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25dp" />

            <CheckBox
                android:id="@+id/checkbox_respect"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="22dp"
                android:scaleX="2"
                android:scaleY="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/design"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="23dp" />

            <EditText
                android:id="@+id/note_design"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:hint="@string/hint"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/meca"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="23dp" />

            <EditText
                android:id="@+id/note_meca"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="55dp"
                android:hint="@string/hint"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/elec"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="23dp" />

            <EditText
                android:id="@+id/note_elec"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="55dp"
                android:hint="@string/hint"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#78909C"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:onClick="sum"
                android:text="obtenir le score "
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@color/darkYellow"
                android:textSize="23dp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_score"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="30dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_scan"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/setscore"
            android:textColor="@color/white"
            android:textSize="23dp" />

    </LinearLayout>

</RelativeLayout>