<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homologation.juniorhomo">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/JuniorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/page_junior"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40dp" />

        <Button
            android:id="@+id/btnscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/item"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="23dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/liste"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnresearch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@drawable/research"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_j"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/two"
        android:layout_marginBottom="100dp"
        android:paddingStart="20dp" />
</RelativeLayout>