<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homologation.JuniorActivity"
    android:background="@color/j">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/JuniorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/page_junior"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/btnscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_scan"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="23dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/liste"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/btnresearch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="@drawable/research"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_j"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/two"
        android:layout_marginBottom="100dp"
        android:paddingStart="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/darkYellow"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/btnjunior"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/letter_j"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/btnsuiveur"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/letter_s" />

        <Button
            android:id="@+id/btnautonome"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/letter_a" />

        <Button
            android:id="@+id/btntoutterrian"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/letter_t" />

    </LinearLayout>

</RelativeLayout>