<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homologation.AutonomeActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AutonomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/page_autonome"
            android:textAlignment="center"
            android:textSize="40dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_scan"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="23dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/one">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textAlignment="center"
            android:text="@string/liste"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnresearch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/research"
            android:layout_marginStart="10dp">
        </Button>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_a"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/two"
        android:layout_marginBottom="100dp"
        android:paddingStart="20dp" />
<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/darkYellow"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnjunior"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/letter_j" />

        <Button
            android:id="@+id/btnsuiveur"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/letter_s" />

        <ImageView
            android:id="@+id/btnautonome"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:background="@drawable/letter_a" />

        <Button
            android:id="@+id/btntoutterrian"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/letter_t" />

    </LinearLayout>
-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/corner"
        app:itemIconSize="25dp"
        app:itemIconTint="#1D1C18"

        app:itemRippleColor="@android:color/transparent"
        app:itemTextColor="#1d1c18"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/imenu1" />
</RelativeLayout>